# build-watch

./: .clang-format  .clangd  .gitignore  .justfile  CMakeLists.txt  CMakePresets.json  CMakeProjectOptions.cmake  LICENSE  README.md
.config/BuildWatch/: config.json
.devcontainer/: Dockerfile  devcontainer.json
apps/build-watch/: BUILD  BUILD.mustache  CMakeLists.txt  CMakeLists.txt.mustache
apps/build-watch/src/: info.hpp  info.hpp.in  main.cpp
cmake/: cache.cmake  compiler_options.cmake  coverage.cmake  dependencies.cmake  prevent_in_source_builds.cmake
libs/lib-build-watch/: CMakeLists.txt  CMakeLists.txt.mustache
libs/lib-build-watch/src/: BuildWatch.cpp  INotify.cpp  INotifyWatch.cpp
libs/lib-build-watch/tests/: BuildWatchTest.cpp  CMakeLists.txt
libs/libBuildWatch/: CMakeLists.txt  CMakeLists.txt.mustache
libs/libBuildWatch/include/BuildWatch/: BuildWatchTask.hpp  Config.hpp  ConfigReader.hpp
libs/libBuildWatch/src/: BuildWatch.cpp  BuildWatch.hpp  BuildWatchTask.cpp  Config.cpp  ConfigReader.cpp  Epoll.cpp  Epoll.hpp  FileUtils.cpp  FileUtils.hpp  INotify.cpp  INotify.hpp  INotifyEvent.hpp  INotifyWatch.hpp  INotifyWrapper.hpp  Ignore.cpp  Ignore.hpp  MoveOnly.hpp
libs/libBuildWatch/tests/: BuildWatchTest.cpp  CMakeLists.txt  CMakeLists.txt.mustache  ConfigTest.cpp  FileUtilsTest.cpp  INotifyTest.cpp  IgnoreTest.cpp
libs/libTestHelpers/: CMakeLists.txt  CMakeLists.txt.mustache
libs/libTestHelpers/include/TestHelpers/: TempDirectory.hpp
libs/libTestHelpers/src/: TempDirectory.cpp
libs/libTestHelpers/tests/: CMakeLists.txt  CMakeLists.txt.mustache  TempDirectoryTest.cpp
